grammar.txt
program = {declaration}, EOF ;

declaration = classDecl | funcDecl | varDecl | statement ;

classDecl  = "class" , IDENTIFIER, ["<", IDENTIFIER] , "{", {(function | staticFun)}, "}"  ;

funDecl  =  "fun", function ;
staticFun = "class", function ;
function = IDENTIFIER, "(", [parameters], ")", block ;
parameters = IDENTIFIER, {( ",", IDENTIFIER )} ;
varDecl = "var", IDENTIFIER, [( "=", expression )], ";" ;
statement = exprStmt | forStmt | ifStmt | printStmt | returnStmt | whileStmt | block ;
exprStmt  = expression, ";" ;
forStmt = "for", "(", ( varDecl | exprStmt | ";" ), [expression], ";", [expression], ")", ( statement | breakStmt ) ;
forStmt = "for", "(", ( varDecl | [expression] ), ";", [expression], ";", [expression], ")", ( statement | breakStmt ) ;

ifStmt = "if", "(", expression, ")", statement, [( "else", statement )] ;
breakStmt = "break", ";" ;
printStmt = "print", expression, ";" ;
returnStmt = "return", [expression], ";" ;
whileStmt  = "while", "(", expression, ")", ( statement | breakStmt ) ;
block       = "{", {declaration | breakStmt} , "}" ;
expression  = assignment ;
assignment  = ([( call, "." )], IDENTIFIER, "=", assignment ) | logic_or ;
logic_or    = logic_and, {"or", logic_and} ;
logic_and   = equality, {"and", equality} ;
equality    = comparison, {( "!=" | "==" ), comparison} ;
comparison  = term, { ( ">" | ">=" | "<" | "<=" ), term} ;
term        = factor, { ( "-" | "+" ), factor} ;
factor      = unary, { ( "/" | "*" ), unary} ;
unary       = ( "!" | "-" ), unary | call ;
call = primary, { ( "(", [arguments], ")" ) | ( ".", IDENTIFIER ) } ;
arguments   = expression, { "," , expression } ;
primary     = NUMBER | STRING | "true" | "false" | "nil" | "this" | ("super", ".", IDENTIFIER) | "(", expression, ")" | IDENTIFIER ;
